<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/container"
    android:background="@color/white"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <ImageView
            android:id="@+id/icon_down"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/arrow_left"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verification"
            android:textSize="18sp"
            android:textColor="#222741"
            android:layout_marginTop="20dp"
            android:layout_marginStart="60dp"
            android:textFontWeight="700"
            tools:targetApi="p" />

    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/open_email"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification_mail"
        android:lineHeight="40dp"
        android:textFontWeight="800"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:layout_gravity="center"
        tools:targetApi="p" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="We have sent a verification mail"
        android:textColor="#ACAEBE"
        android:lineHeight="24dp"
        android:textFontWeight="400"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        tools:targetApi="p" />

    <TextView
        android:id="@+id/profile_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/magdelana83_mail_com"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:textFontWeight="500"
        android:visibility="gone"
        tools:targetApi="p" />



    <Button
        android:id="@+id/btn_chk"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="Check Verification"
        android:textAllCaps="false"
        android:backgroundTint="#407CE2"
        android:textSize="16sp"
        android:textColor="@color/white"

        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Didnt receive the mail?"
            android:textColor="#ACAEBE"
            android:lineHeight="24dp"
            android:textFontWeight="400"
            android:layout_marginStart="60dp"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            tools:targetApi="p" />

        <TextView
            android:id="@+id/tv_resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend"
            android:textColor="#407CE2"
            android:lineHeight="24dp"
            android:textFontWeight="600"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:textAlignment="center"
            tools:targetApi="p" />

    </LinearLayout>


</LinearLayout>